# hcl2json

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
test_data/: config1.tfvars  config2.tfvars  malformed.hcl  network.tfvars  quotes.tfvars  terraform.tfvars
tests/: integration_tests.rs
