[package]
name = "hcl2json"
version = "0.1.0"
edition = "2021"

[lib]
name = "hcl2json"
path = "src/lib.rs"

[[bin]]
name = "hcl2json"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hcl-rs = "0.16"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
glob = "0.3"

[dev-dependencies]
tempfile = "3.0"
